second commit, no major changes
Second commit, no major changes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="/faq/faq.html">FAQ</a></li>
       <li><a href="/get-involved/get-involved.html">Get Involved</a></li>
-    </nav><h1 id="welcome">Welcome</h1>
-<p>This is my website that I built with <em>jade</em>, <em>coffee-script</em>, and <em>sass</em>.</p>
-
+    </nav>
+    <div id="Welcome">To My Website</div>
+    <This>is my website that I built with *jade*, *coffee-script*, and *sass*.</This>
   </body>
 </html>
