--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- layout.jade--><!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.css">
     <title>Welcome</title>
   </head>
   <body>
